--- a/static_files/css/style.css
+++ b/static_files/css/style.css
@@ -2,10 +2,33 @@
 	padding-left: 20px;
 }
 
+.paris.nav{
+	padding-left: 20px;
+}
+
+
 .dropdown-menu{
 	padding-left: 20px;
 }
 
 .header {
   border-bottom: 1px solid #e5e5e5;
+}
+
+.titulo.nav{
+	padding-left: 20px;
+}
+
+.topbar-Topo{
+	position: fixed;
+}
+
+.inline{
+	float: left;
+	margin-right: 60px;
+}
+
+.inline2{
+	float: left;
+	margin-right: 60px;
 }
